feat: offering-based academic catalog (matrix) replacing class grades
Content is now anchored to offerings — board + class ordinal + global subject
(board_class_subject) — instead of per-board grade rows with display-name identity.

- class_levels: 17 global ordinals (age-band spine); board labels are board-local
  presentation only and never part of identity (uniqueness is board_id+class_level_id)
- boards: country_id + min_ordinal/max_ordinal cover; countries table added
- subjects are global (code unique); board_class_subject = the offering every
  content_pack/quiz_bundle hangs off
- AcademicStructureSeeder (@Order 1, app.academic-structure-seeding.enabled) seeds
  ALL/CBSE/MH/ICSE/ENG/US/IB with labels; offerings only for ALL + CBSE
  (Math/English/EVS everywhere, +Science/Social Studies from ordinal >= 10)
- AcademicCatalogResolver: className -> ordinal resolution (board labels -> ALL labels
  -> heuristic), offering ALL-fallback; QuestionBankLoader chain is now
  Board -> BoardClass -> offering -> ContentPack -> Quiz -> Question
- QuizBundleService/Seeder are offering-driven; idempotency key holds offering ids only
  (never className/boardCode); ensureLibraryQuiz is per offering
- schema.sql migrates legacy DBs: wipes the content chain, drops class_grades,
  drops subjects.class_grade_id / content_packs.subject_id, pre-adds board ordinal columns
- new endpoints: /class-levels, /board-classes, /offerings; QuizController.library now
  takes offeringId; ContentPackController has /content-packs/offering/{offeringId}
- test profile gated (academic-structure-seeding disabled); added AcademicStructureSeederTest
  asserting the seeded matrix is complete + idempotent; QuestionBankLoaderTest/
  QuizBundleServiceTest rewritten for offerings
- docs: ACADEMIC_STRUCTURE.md (matrix + how to add a board), ss-modulith.md and
  QUESTION_BANK_GUIDE.md updated